--- a/package.json
+++ b/package.json
@@ -16,5 +16,42 @@
   "bugs": {
     "url": "https://github.com/NBeing/VSAV_MatchDB_Web/issues"
   },
-  "homepage": "https://github.com/NBeing/VSAV_MatchDB_Web#readme"
+  "homepage": "https://github.com/NBeing/VSAV_MatchDB_Web#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "css-loader": "^6.6.0",
+    "eslint": "^8.9.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^6.2.1",
+    "sass-loader": "^12.6.0",
+    "source-map-loader": "^3.0.1",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.0.0",
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          },
+          "corejs": "3",
+          "useBuiltIns": "usage"
+        }
+      ]
+    ]
+  }
 }
