--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/NBeing/VSAV_MatchDB_Web#readme",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
@@ -64,23 +65,34 @@
           "useBuiltIns": "usage"
         }
       ]
-    ]
+    ],
+    "plugins": [
+        [ "@babel/plugin-transform-runtime",
+          {
+            "absoluteRuntime": false,
+            "corejs": false,
+            "helpers": true,
+            "regenerator": true
+          }
+]    ]
   },
   "dependencies": {
+    "@babel/runtime": "^7.17.2",
     "@popperjs/core": "^2.11.2",
     "@types/react": "^17.0.39",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.26.0",
     "bootstrap": "^5.0.0",
     "font-awesome": "^4.7.0",
     "history": "^5.2.0",
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.0",
-    "react-router": "^6.0.0-beta.2",
-    "react-router-dom": "^6.0.0-beta.2"
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1"
   },
   "eslintConfig": {
     "env": {
@@ -119,7 +131,8 @@
       "react/prop-types": "warn",
       "import/no-unresolved": "warn",
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
+      "react-hooks/exhaustive-deps": "warn",
+      "@typescript-eslint/no-non-null-assertion": "off"
     },
     "settings": {
       "react": {
