--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/register": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.0.0",
     "core-js": "^3.0.0",
@@ -81,6 +82,8 @@
   "dependencies": {
     "@babel/runtime": "^7.17.2",
     "@popperjs/core": "^2.11.2",
+    "@types/enzyme": "^3.10.11",
+    "@types/jest": "^27.4.1",
     "@types/react": "^17.0.39",
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^17.0.11",
@@ -88,14 +91,17 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.26.0",
     "bootstrap": "^5.0.0",
+    "enzyme": "^3.11.0",
     "font-awesome": "^4.7.0",
     "history": "^5.2.0",
+    "jest": "^27.5.1",
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.27.1",
     "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-test-renderer": "^17.0.2"
   },
   "eslintConfig": {
     "env": {
