--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./build/webpack/local.webpack.config.babel.js --env=localdev",
-    "start": "webpack serve --open --config ./build/webpack/local.webpack.config.babel.js --env=localdev"
+    "start": "webpack serve --open --config ./build/webpack/local.webpack.config.babel.js --env=localdev",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
@@ -47,8 +50,9 @@
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
+    "ts-jest": "^27.1.3",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.0.0",
+    "typescript": "^4.5.5",
     "typescript-eslint": "^0.0.1-alpha.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.9.2",
