* Add new aiases to tsconfig, jest config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
             "@Common/*"         : ["./common/*"],
             "@CommonEnums/*"    : ["./common/enums/*"],
             "@Components/*"     : ["./components/*"],
-            "@Services/*"       : ["./services/*"] 
+            "@Services/*"       : ["./services/*"],
+            "@Root/*"           : ["./*"] 
         }
     },
     "include": [
