--- a/package.json
+++ b/package.json
@@ -99,10 +99,12 @@
     "font-awesome": "^4.7.0",
     "history": "^5.2.0",
     "jest": "^27.5.1",
+    "nock": "^13.2.4",
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.27.1",
+    "react-jss": "^10.9.0",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-test-renderer": "^17.0.2"
