--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "history": "^5.2.0",
     "jest": "^27.5.1",
     "nock": "^13.2.4",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.0",
     "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.0",
