--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
 
   vsav_fe_dev:
@@ -8,8 +6,11 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - '.:/app'
+      - 'matchdb-web:/app'
     ports:
       - 9000:9000
     environment:
       - CHOKIDAR_USEPOLLING=true
+volumes:
+  matchdb-web:
+    driver: local
